fixed intro and skill text spillover issue by removing height and width property

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,18 @@
+
+#bg_image {
+  /*removed position absolute b/c it was hiding elements below and taking over site*/
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url('../images/wave2.jpg') no-repeat center;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
+  background-origin: content-box;
+  -webkit-filter:grayscale(0.2);
+}
+
 .ui-dialog.ui-widget.ui-widget-content.ui-corner-all.ui-front.ui-draggable.ui-resizable {
   border: 1px solid #2b507a;
   position: absolute;
@@ -79,18 +94,6 @@ h5 {
   height: 210px;
 }
 
-
-#bg_image {
-  /*removed position absolute b/c it was hiding elements below and taking over site*/
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: url('../images/wave2.jpg') no-repeat center;
-  background-size: 100% 100%;
-  background-origin: content-box;
-  -webkit-filter:grayscale(0.2);
-}
-
 #name {
   font-family: 'Fauna One', serif;
   font-size: 44px;
@@ -102,8 +105,6 @@ h5 {
 }
 
 .intro {
-  width: 540px;
-  height: 150px;
   padding-top: 20px;
   position: absolute;
   left: 520px;
@@ -113,12 +114,11 @@ h5 {
 }
 
 #skills{
-  width: 540px;
-  height: 150px;
   color: #254763;
   position: absolute;
   left: 620px;
   top: 220px;
+  overflow: auto;
 }
 
 #personal_info{
@@ -135,8 +135,8 @@ h5 {
   color: white;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   font-weight: bold;
-
 }
+
 .icons {
   font-size: 1.7em;
   text-decoration: none;
